# kappa

./: .env.example  .gitignore  CLAUDE.md  README.md  SYSTEM_ARCHITECTURE_CONTEXT.md  demo_budget.py  demo_phase2.py  demo_phase3.py  interactive.py  phase1_prompt.md  phase2_prompt.md  phase2_task1_prompt.md  phase3_prompt.md  phase3_task1_prompt.md  phase4_prompt.md  pyproject.toml
Plan/: PHASE_1_ACTION_PLAN.md  PHASE_2_ACTION_PLAN.md  PHASE_3_ACTION_PLAN.md  PHASE_3_DESIGN_BRIEFING.md  PHASE_4_ACTION_PLAN.md  PHASE_5_ACTION_PLAN.md
docs/: index.html
src/kappa/: __init__.py  cli.py  config.py  exceptions.py  hitl.py  main.py
src/kappa/budget/: __init__.py  gate.py  tracker.py
src/kappa/defense/: __init__.py  semantic.py
src/kappa/graph/: __init__.py  graph.py  interview.py  meta_prompter.py  nodes.py  orchestrator.py  state.py
src/kappa/infra/: __init__.py  jitter.py  session_lane.py
src/kappa/memory/: __init__.py  vfs.py
src/kappa/rag/: __init__.py  manager.py  tool.py
src/kappa/sandbox/: __init__.py  executor.py  safety.py
src/kappa/telemetry/: __init__.py  manager.py
src/kappa/tools/: __init__.py  builtins.py  mcp.py  registry.py
tests/: test_budget.py  test_cli.py  test_graph_v2.py  test_hitl.py  test_infra.py  test_interview.py  test_mcp.py  test_meta_prompter.py  test_orchestrator.py  test_orchestrator_meta.py  test_rag.py  test_sandbox.py  test_sandbox_integration.py  test_self_healing.py  test_semantic.py  test_telemetry.py  test_tools.py  test_vfs.py
